--- a/scss/global/_fonts.scss
+++ b/scss/global/_fonts.scss
@@ -9,6 +9,16 @@
 }
 
 @font-face {
+    font-family: 'clearsans';
+    src: url('../../fonts/clearsans/ttf/ClearSans-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'clearsans-light';
+    src: url('../../fonts/clearsans/ttf/ClearSans-Light.ttf') format('truetype');
+}
+
+@font-face {
     font-family: 'clearsans-thin';
     src: url('../../fonts/clearsans/ttf/ClearSans-Thin.ttf') format('truetype');
 }
