--- a/scss/app.scss
+++ b/scss/app.scss
@@ -6,6 +6,7 @@
 @import "global/colors";
 @import "global/type";
 @import "global/form";
+@import "global/general";
 
 // HOME
 @import "home/navbar";
