--- a/scss/app.scss
+++ b/scss/app.scss
@@ -12,5 +12,6 @@
 @import "home/navbar";
 @import "home/hero";
 @import "home/bio";
+@import "home/ican";
 @import "home/about";
 @import "home/portfolio";
