--- a/scss/global/_type.scss
+++ b/scss/global/_type.scss
@@ -1,13 +1,17 @@
 p {
     font-family: 'clearsans-light';
     letter-spacing: 0.6pt;
-    
+    color: #555;
 }
-.ar_heading, h3, h2 {
+
+.section-heading {
+    color: goldenrod;
+}
+
+.section-heading, h3, h2 {
 //    font-family: 'clearsans' !important;
 //    letter-spacing: 1pt;
     margin: 20px;
-    color: goldenrod;
 }
 
 .ar_subheading {
