--- a/scss/home/_hero.scss
+++ b/scss/home/_hero.scss
@@ -43,11 +43,14 @@
             width: 70%;
              
              .ar_i_hi {
-                 font-family: 'aleo-light';
+//                 font-family: 'aleo-light';
+                 font-family: 'clearsans-thin';
+                 font-style: normal;
              }
              .ar_i_typewritter {
                  display: inline-block;
                  font-family: 'aleo-light';
+//                 font-family: monospace;
                  text-transform: none;
                  font-weight: normal;
                  font-size: 2em;
