--- a/css/app.css
+++ b/css/app.css
@@ -68,77 +68,69 @@ section {
   background-image: url("../img/header-bg-funky.jpg");
   color: white;
   height: 100vh; }
-  .ar_hero .intro-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between; }
-    .ar_hero .intro-text .ar_i_lead_wrapper {
-      border-radius: 3px;
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 20px;
-      height: 200px;
-      margin: 0 auto;
-      width: 70%; }
-      .ar_hero .intro-text .ar_i_lead_wrapper .ar_i_hi {
-        font-family: 'clearsans-thin';
-        font-style: normal; }
-      .ar_hero .intro-text .ar_i_lead_wrapper .ar_i_typewritter {
-        display: inline-block;
-        font-family: 'aleo-light';
-        text-transform: none;
-        font-weight: normal;
-        font-size: 2em;
-        line-height: 2em; }
-      .ar_hero .intro-text .ar_i_lead_wrapper .typed-cursor {
-        font-size: 2.2em;
-        line-height: 2.2em; }
-    .ar_hero .intro-text .ar_i_tags {
-      margin-top: 20px; }
-    .ar_hero .intro-text .ar_i_tag {
+  .ar_hero .intro-text .ar_i_lead_wrapper {
+    border-radius: 3px;
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 20px;
+    height: 200px;
+    margin: 0 auto;
+    width: 70%; }
+    .ar_hero .intro-text .ar_i_lead_wrapper .ar_i_hi {
       font-family: 'clearsans-thin';
-      font-size: 1em;
-      line-height: 1em;
-      letter-spacing: 1px;
-      padding: 10px;
-      text-decoration: none; }
-      .ar_hero .intro-text .ar_i_tag:hover {
-        border-radius: 3px;
-        background: rgba(0, 0, 0, 0.5);
+      font-style: normal; }
+    .ar_hero .intro-text .ar_i_lead_wrapper .ar_i_typewritter {
+      display: inline-block;
+      font-family: 'aleo-light';
+      text-transform: none;
+      font-weight: normal;
+      font-size: 2em;
+      line-height: 2em; }
+    .ar_hero .intro-text .ar_i_lead_wrapper .typed-cursor {
+      font-size: 2.2em;
+      line-height: 2.2em; }
+  .ar_hero .intro-text .ar_i_tags {
+    margin-top: 20px; }
+  .ar_hero .intro-text .ar_i_tag {
+    font-family: 'clearsans-thin';
+    font-size: 1em;
+    line-height: 1em;
+    letter-spacing: 1px;
+    padding: 10px;
+    text-decoration: none; }
+    .ar_hero .intro-text .ar_i_tag:hover {
+      border-radius: 3px;
+      background: rgba(0, 0, 0, 0.5);
+      color: aqua; }
+  .ar_hero .intro-text .ar_social_wrapper {
+    margin: 100px auto 0;
+    width: 100px; }
+    .ar_hero .intro-text .ar_social_wrapper .ar_i_avatar_wrapper {
+      margin: 0 auto 10px;
+      overflow: hidden;
+      width: 70px;
+      height: 70px;
+      border-radius: 50%; }
+      .ar_hero .intro-text .ar_social_wrapper .ar_i_avatar_wrapper img {
+        max-width: 100%;
+        max-height: auto; }
+    .ar_hero .intro-text .ar_social_wrapper .ar_i_links {
+      margin: 0 auto; }
+    .ar_hero .intro-text .ar_social_wrapper .ar_i_icon {
+      padding: 5px; }
+      .ar_hero .intro-text .ar_social_wrapper .ar_i_icon a:hover {
         color: aqua; }
-    .ar_hero .intro-text .ar_social_wrapper {
-      margin: 100px auto 0;
-      width: 100px; }
-      .ar_hero .intro-text .ar_social_wrapper .ar_i_avatar_wrapper {
-        margin: 0 auto 10px;
-        overflow: hidden;
-        width: 70px;
-        height: 70px;
-        border-radius: 50%; }
-        .ar_hero .intro-text .ar_social_wrapper .ar_i_avatar_wrapper img {
-          max-width: 100%;
-          max-height: auto; }
-      .ar_hero .intro-text .ar_social_wrapper .ar_i_links {
-        margin: 0 auto; }
-      .ar_hero .intro-text .ar_social_wrapper .ar_i_icon {
-        padding: 5px; }
-        .ar_hero .intro-text .ar_social_wrapper .ar_i_icon a:hover {
-          color: aqua; }
 
 @media (min-width: 768px) {
-  .ar_hero .intro-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between; }
-    .ar_hero .intro-text .intro-lead-in {
-      font-style: italic;
-      font-size: 40px;
-      line-height: 40px;
-      margin-bottom: 25px; }
-    .ar_hero .intro-text .intro-heading {
-      font-weight: 700;
-      font-size: 75px;
-      line-height: 75px;
-      margin-bottom: 50px; } }
+  .ar_hero .intro-text .intro-lead-in {
+    font-style: italic;
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 25px; }
+  .ar_hero .intro-text .intro-heading {
+    font-weight: 700;
+    font-size: 75px;
+    line-height: 75px;
+    margin-bottom: 50px; } }
 
 #ar_bio_section {
   background-color: ghostwhite; }
@@ -197,22 +189,28 @@ section {
     .ar_portfolio_meta .ar_i_links a:hover {
       color: rgba(0, 255, 255, 0.6); }
 
-.modal-content .ar_modal_features {
-  text-align: left;
-  font-family: 'clearsans-light'; }
-
-.modal-content h5 {
-  text-align: left; }
-
-.modal-content .ar_modal_techstack {
-  text-align: left;
-  font-family: 'clearsans-light';
-  font-size: 1em; }
+.modal-content {
+  background-color: rgba(105, 105, 105, 0.7); }
+  .modal-content .ar_model_container {
+    background-color: ghostwhite; }
+  .modal-content .ar_modal_features {
+    text-align: left;
+    font-family: 'clearsans-light'; }
+  .modal-content h5 {
+    padding: 10px;
+    border: thin solid lightgray;
+    border-radius: 2px;
+    text-align: left; }
+  .modal-content .ar_modal_techstack {
+    text-align: left;
+    font-family: 'clearsans-light';
+    font-size: 1em; }
 
 @media (min-width: 768px) {
   .modal-content {
     padding-top: 0 !important; }
     .modal-content .ar_modal_image_container {
+      padding-top: 5px;
       margin-top: 30px; }
       .modal-content .ar_modal_image_container .ar_i_wrapper {
         height: 200px; } }
