--- a/scss/home/_portfolio.scss
+++ b/scss/home/_portfolio.scss
@@ -56,11 +56,18 @@
 }
 
 .modal-content {
+    background-color: rgba(dimgray, 0.7);
+    .ar_model_container {
+        background-color: ghostwhite;
+    }
     .ar_modal_features {
         text-align: left;
         font-family: 'clearsans-light';
     }
     h5 {
+        padding: 10px;
+        border: thin solid lightgray;
+        border-radius: 2px;
         text-align: left;
     }
     .ar_modal_techstack {
@@ -76,6 +83,7 @@
         padding-top: 0 !important;
         
         .ar_modal_image_container {
+            padding-top: 5px;
             margin-top: 30px;
             .ar_i_wrapper {
                 height: 200px;
