--- a/css/app.css
+++ b/css/app.css
@@ -104,6 +104,11 @@ section {
   .ar_hero .intro-text .ar_social_wrapper {
     margin: 100px auto 0;
     width: 100px; }
+    @media (min-width: 1440px) {
+      .ar_hero .intro-text .ar_social_wrapper {
+        width: 200px;
+        margin: 150px auto 0;
+        font-size: 1.8em; } }
     .ar_hero .intro-text .ar_social_wrapper .ar_i_avatar_wrapper {
       margin: 0 auto 10px;
       overflow: hidden;
@@ -115,22 +120,34 @@ section {
         max-height: auto; }
     .ar_hero .intro-text .ar_social_wrapper .ar_i_links {
       margin: 0 auto; }
+      .ar_hero .intro-text .ar_social_wrapper .ar_i_links a {
+        color: goldenrod; }
     .ar_hero .intro-text .ar_social_wrapper .ar_i_icon {
       padding: 5px; }
       .ar_hero .intro-text .ar_social_wrapper .ar_i_icon a:hover {
         color: aqua; }
 
 @media (min-width: 768px) {
-  .ar_hero .intro-text .intro-lead-in {
-    font-style: italic;
-    font-size: 40px;
-    line-height: 40px;
-    margin-bottom: 25px; }
-  .ar_hero .intro-text .intro-heading {
-    font-weight: 700;
-    font-size: 75px;
-    line-height: 75px;
-    margin-bottom: 50px; } }
+  .ar_hero .intro-text {
+    padding-top: 200px;
+    padding-bottom: 200px; }
+    .ar_hero .intro-text .intro-lead-in {
+      font-style: italic;
+      font-size: 40px;
+      line-height: 40px;
+      margin-bottom: 25px; }
+    .ar_hero .intro-text .intro-heading {
+      font-weight: 700;
+      font-size: 75px;
+      line-height: 75px;
+      margin-bottom: 50px; } }
+
+@media (min-width: 1440px) {
+  .ar_hero .intro-text {
+    padding-top: 400px;
+    padding-bottom: 150px; }
+    .ar_hero .intro-text .ar_i_lead_wrapper {
+      width: 90%; } }
 
 #ar_bio_section {
   background-color: ghostwhite; }
@@ -213,7 +230,10 @@ section {
       padding-top: 5px;
       margin-top: 30px; }
       .modal-content .ar_modal_image_container .ar_i_wrapper {
-        height: 200px; } }
+        height: 200px; }
+        .modal-content .ar_modal_image_container .ar_i_wrapper img {
+          max-width: 100%;
+          max-height: 150px; } }
 
 section.ar_contact {
   height: 100vh;
