--- a/scss/home/_hero.scss
+++ b/scss/home/_hero.scss
@@ -87,6 +87,11 @@
          
          // Social links
          .ar_social_wrapper {
+             @media(min-width:1440px) {
+                width: 200px;
+                margin: 150px auto 0;   
+                font-size: 1.8em;
+             }
              margin: 100px auto 0;
              width: 100px;
              
@@ -105,6 +110,9 @@
              
              .ar_i_links {
                  margin: 0 auto;
+                 a {
+                     color: goldenrod;
+                 }
              }
              
              .ar_i_icon {
@@ -121,8 +129,8 @@
 @media(min-width:768px) {
     .ar_hero {
         .intro-text {
-//            padding-top: 200px;
-//            padding-bottom: 200px;
+            padding-top: 200px;
+            padding-bottom: 200px;
             .intro-lead-in {
                 font-style: italic;
                 font-size: 40px;
@@ -134,6 +142,18 @@
                 font-size: 75px;
                 line-height: 75px;
                 margin-bottom: 50px;
+            }
+        }
+    }
+}
+
+@media(min-width:1440px) {
+    .ar_hero {
+        .intro-text {
+            padding-top: 400px;
+            padding-bottom: 150px;
+            .ar_i_lead_wrapper {
+                width: 90%;
             }
         }
     }
