--- a/scss/home/_portfolio.scss
+++ b/scss/home/_portfolio.scss
@@ -87,6 +87,11 @@
             margin-top: 30px;
             .ar_i_wrapper {
                 height: 200px;
+                
+                img {
+                    max-width: 100%;
+                    max-height: 150px;
+                }
             }
         }
     }
