--- a/scss/global/_fonts.scss
+++ b/scss/global/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'aleo';
-    src: url('../../fonts/aleofont/ttf/aleo-regular-webfont.ttf') format('truetype');
+    src: url('https://fonts.googleapis.com/css?family=Slabo+13px') format('truetype');
 }
 
 @font-face {
