--- a/scss/home/_hero.scss
+++ b/scss/home/_hero.scss
@@ -45,18 +45,17 @@
             width: 70%;
              
              .ar_i_hi {
-//                 font-family: 'aleo-light';
-                 font-family: 'clearsans-thin';
+                 font-family: 'Raleway';
                  font-style: normal;
+                 font-weight: 300;
              }
              .ar_i_typewritter {
                  display: inline-block;
-                 font-family: 'aleo-light';
-//                 font-family: monospace;
+                 font-family: 'Slabo 13px';
                  text-transform: none;
                  font-weight: normal;
-                 font-size: 2em;
-                 line-height: 2em;
+                 font-size: 1.8em;
+                 line-height: 1.8em;
              }
              
              .typed-cursor {
@@ -71,7 +70,8 @@
          }
          
          .ar_i_tag {
-             font-family: 'clearsans-thin';
+             font-family: 'Raleway';
+             font-weight: 300;
              font-size: 1em;
              line-height: 1em;
              letter-spacing: 1px;
