--- a/scss/global/_general.scss
+++ b/scss/global/_general.scss
@@ -2,13 +2,14 @@ section {
     padding: 40px;
 //    margin: 40px 0;
     h2.section-heading {
+        font-family: 'Raleway';
         font-size: 40px;
         margin-top: 0;
         margin-bottom: 15px;
     }
     h3.section-subheading {
         font-size: 16px;
-        @include serif-font;
+        font-family: 'Slabo 13px' !important;
         text-transform: none;
         font-style: italic;
         font-weight: 400;
