--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,7 +2,9 @@
 
 // Gray and Brand Colors for use across theme
 
-$theme-primary:    #fed136;
+//$theme-primary:    #fed136;
+//$theme-danger:     #e74c3c;
+$theme-primary:    #1abc9c;
 $theme-danger:     #e74c3c;
 
 $gray-base:			#000 !default;
