--- a/scss/global/_general.scss
+++ b/scss/global/_general.scss
@@ -6,6 +6,7 @@ section {
         font-size: 40px;
         margin-top: 0;
         margin-bottom: 15px;
+        color: $theme-primary;
     }
     h3.section-subheading {
         font-size: 16px;
@@ -23,6 +24,7 @@ div, p, span {
 
 h1,h2,h3,h4,h5,h6 {
     font-family: 'Slabo 13px';
+    color: $theme-primary;
 }
 
 @media(min-width:768px) {
