--- a/scss/home/_hero.scss
+++ b/scss/home/_hero.scss
@@ -77,6 +77,7 @@
              letter-spacing: 1px;
              padding: 10px;
              text-decoration: none;
+             color: #fed136;
              
              &:hover {
                  border-radius: 3px;
@@ -111,7 +112,7 @@
              .ar_i_links {
                  margin: 0 auto;
                  a {
-                     color: goldenrod;
+                     color: $theme-primary;
                  }
              }
              
