--- a/css/app.css
+++ b/css/app.css
@@ -50,6 +50,14 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Slabo 13px';
   color: #1abc9c; }
 
+::-moz-selection {
+  text-shadow: none;
+  background: #81eed8; }
+
+::selection {
+  text-shadow: none;
+  background: #81eed8; }
+
 @media (min-width: 768px) {
   section {
     padding: 90px; } }
