--- a/scss/global/_general.scss
+++ b/scss/global/_general.scss
@@ -27,6 +27,16 @@ h1,h2,h3,h4,h5,h6 {
     color: $theme-primary;
 }
 
+::-moz-selection {
+    text-shadow: none;
+    background: lighten($theme-primary, 30);
+}
+
+::selection {
+    text-shadow: none;
+    background: lighten($theme-primary, 30);
+}
+
 @media(min-width:768px) {
     section {
         padding: 90px;
