--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,7 @@
 //$theme-primary:    #fed136;
 //$theme-danger:     #e74c3c;
 $theme-primary:    #1abc9c;
+$theme-secondary:    goldenrod;
 $theme-danger:     #e74c3c;
 
 $gray-base:			#000 !default;
