--- a/scss/home/_contact.scss
+++ b/scss/home/_contact.scss
@@ -15,7 +15,7 @@ section.ar_contact {
     }
     
     .section-heading {
-        color: goldenrod !important;
+        color: $theme-primary !important;
     }
     
     textarea {
@@ -27,5 +27,15 @@ section.ar_contact {
         height: 70px;
 //        margin-top: 6.3%;
         background-color: rgba(black, 0.7);
+        
+        .social-buttons {
+            li a {
+                &:hover,
+                &:focus,
+                &:active {
+                    background-color: $theme-primary;
+                }
+            }
+        }
     }
 }
