--- a/scss/global/_general.scss
+++ b/scss/global/_general.scss
@@ -18,6 +18,10 @@ section {
     }
 }
 
+.text-primary {
+    color: $theme-secondary;
+}
+
 div, p, span {
     font-family: 'Raleway';
 }
@@ -25,6 +29,14 @@ div, p, span {
 h1,h2,h3,h4,h5,h6 {
     font-family: 'Slabo 13px';
     color: $theme-primary;
+}
+
+.btn-xl {
+    @include button-variant(white, $theme-primary, $theme-primary);
+    font-weight: 700;
+    border-radius: 3px;
+    font-size: 18px;
+    padding: 20px 40px;
 }
 
 ::-moz-selection {
